--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://rachaelstaticsite.onrender.com"
 languageCode = "en-us"
 paginate = 6
 theme = "portio-hugo"
