--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ baseURL = "https://rachaelstaticsite.onrender.com"
 languageCode = "en-us"
 paginate = 6
 theme = "portio-hugo"
-title = "Portio"
+title = "Rachael Mason"
 # Main Menu
 [[menu.main]]
 name = "Home"
